[project]
name = "langgraph-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "grandalf>=0.8", #langgraph 그래프 라이브러리
    "langchain[openai]>=0.3.27", #langchain 오픈AI 연동
    "langgraph>=0.6.6", #langgraph 라이브러리
    "langgraph-checkpoint-sqlite>=2.0.11", #langgraph 체크포인트 저장 라이브러리
    "langgraph-cli[inmem]>=0.4.0", #langgraph 개발서버 CLI 도구 [inmem] 인메모리 모드
    "python-dotenv>=1.1.1", #환경변수 관리
]

[dependency-groups]
dev=[
    "ipykernel>=6.30.1", #ipython 커널 라이브러리 주피터노트북 커널 
]